src/objects/SCRB_SalesOrder__c.object
<CustomObject>
    <fields>
        <fullName>Pricebook__c</fullName>
        <label>Price Book</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Project_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Project Master</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_SRECs_Generated__c</fullName>
        <description>Projected Annual SRECs Generated in the First Full Year Excluding Carry Over Based on Projected Total Annual Output</description>
        <formula>System_Design_Quote__r.System_Design__r.Projected_Annual_SRECs_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Projected Annual SRECs Generated in the First Full Year Excluding Carry Over Based on Projected Total Annual Output</inlineHelpText>
        <label>Projected Annual SRECs Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Projected_Annual_SRECs_UnTruncated__c</fullName>
        <description>Full Precision Projected Annual SRECs Generated</description>
        <formula>System_Design_Quote__r.System_Design__r.Total_Projected_Annual_Output_kWh_y__c/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Full Precision Projected Annual SRECs Generated</inlineHelpText>
        <label>Projected Annual SRECs UnTruncated</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prop_Ownership_Could_NOT_Be_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lease ONLY - Property Ownership Confirmation Documentation Could NOT be Obtained</description>
        <inlineHelpText>Lease ONLY - Property Ownership Confirmation Documentation Could NOT be Obtained</inlineHelpText>
        <label>Prop Ownership Could NOT Be Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_Ownership_Doc_Attached_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Lease ONLY - Property Ownership Confirmation Documentation Attached</description>
        <inlineHelpText>Lease ONLY - Property Ownership Confirmation Documentation Attached</inlineHelpText>
        <label>Property Ownership Doc Attached (Lease)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quoted_System_Site_Quality__c</fullName>
        <description>Site Quality of the Sold System</description>
        <formula>System_Design_Quote__r.System_Design__r.Overall_Site_Quality__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Site Quality of the Sold System</inlineHelpText>
        <label>Quoted System Site Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RSM_Email__c</fullName>
        <formula>Owner_User__r.Manager.Email</formula>
        <label>RSM Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_ID__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <label>RSM ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Code_After_Solar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Code After Solar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Sales Orders (Rate Code After Solar)</relationshipLabel>
        <relationshipName>Sales_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Code_Before_Solar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Code Before Solar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Utility_Company__c.RecordType.Name</field>
                <operation>notEqual</operation>
                <value>Custom</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Utility_Company__c</referenceTo>
        <relationshipLabel>Sales Orders (Rate Code Before Solar)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Re_Submit_Penalty_Deadline__c</fullName>
        <inlineHelpText>If the Sales Order is not Re-Submitted by this time, the Sales Consultant will be penalized.</inlineHelpText>
        <label>Re-Submit Penalty Deadline</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_Submit_Penalty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Submit Penalty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referring_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mapped from Opportunity Referring Account field</description>
        <inlineHelpText>Mapped from Opportunity Referring Account field</inlineHelpText>
        <label>Referring Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orders (Referring Account)</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Commission__c</fullName>
        <label>Regional Sales Manager Commission ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Sales Manager Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager__c</fullName>
        <label>Regional Sales Manager</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RequestedShipmentOn__c</fullName>
        <defaultValue>Today() + 60</defaultValue>
        <label>Requested Installation On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requires_Tree_Removal__c</fullName>
        <description>Does This Project Require Tree Removal for Quoted Site Quality?</description>
        <inlineHelpText>Does This Project Require Tree Removal for Quoted Site Quality?</inlineHelpText>
        <label>Requires Tree Removal</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requires_Tree_Removal_formula__c</fullName>
        <formula>System_Design_Quote__r.System_Design__r.Tree_Removal__c</formula>
        <label>SD Requires Tree Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rootstock_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rootstock Sales Order</label>
        <referenceTo>rstk__sohdr__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDQ_Out_of_Sync__c</fullName>
        <description>If the Opportunity SDQ is not the same as the Sales Order SDQ, this field will be TRUE.</description>
        <formula>System_Design_Quote__c != OpportunityId__r.System_Design_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the Opportunity SDQ is not the same as the Sales Order SDQ, this field will be TRUE.</inlineHelpText>
        <label>SDQ Out of Sync?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_Cash_Back__c</fullName>
        <label>SREC Cash Back</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The SREC Contract of the System That was Sold is Attached</description>
        <inlineHelpText>Is The SREC Contract of the System That was Sold Attached?</inlineHelpText>
        <label>SREC Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SREC_Contract_Discount__c</fullName>
        <label>SREC Contract Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SREC_Responsible_Party__c</fullName>
        <description>Who is handling SRECs for the system on this Sales Order?</description>
        <inlineHelpText>Who is handling SRECs for the system on this Sales Order?</inlineHelpText>
        <label>SREC Responsible Party</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Solar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Constellation Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A - Project Expansion</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Alert_Email__c</fullName>
        <label>Sales Alert Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Contract_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Sales Contract of the System That was Sold is Attached</description>
        <inlineHelpText>Is The Sales Contract of the System That was Sold Attached?</inlineHelpText>
        <label>Sales Contract Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Coordinator_Notes__c</fullName>
        <description>Notes from the Sales Coordinator</description>
        <label>Sales Coordinator Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Sales_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Error_Tracking__c</fullName>
        <description>Were There Any Errors In the Sales Process?</description>
        <inlineHelpText>Were There Any Errors In the Sales Process?</inlineHelpText>
        <label>Sales Error Tracking</label>
        <picklist>
            <picklistValues>
                <fullName>Hand-off Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Orders_SalesManager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Approval_Comments__c</fullName>
        <description>Sales Order Approval Rejection Comments</description>
        <label>SO Approval/Rejection Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Approval_Date__c</fullName>
        <description>Date Approved by Sales Manager</description>
        <inlineHelpText>Date Approved by Sales Manager</inlineHelpText>
        <label>Sales Order Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Proposal_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Proposal Attached (Spreadsheet)</description>
        <inlineHelpText>Sales Proposal Attached (Spreadsheet)</inlineHelpText>
        <label>Sales Proposal Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Region_SC__c</fullName>
        <formula>Property__r.Astrum_Sales_Region__r.Sales_Coordinator__r.Id</formula>
        <label>Sales Region SC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <picklist>
            <picklistValues>
                <fullName>MA Region</fullName>
                <color>#FFCC66</color>
            </picklistValues>
            <picklistValues>
                <fullName>MD Region</fullName>
                <color>#6600CC</color>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
                <color>#FF0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>NYW Region</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
                <color>#3366FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>CA Region</fullName>
                <color>#006600</color>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
                <color>#33FFFF</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_First_Month__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LEASE ONLY - Sales Tax First Month, First Year</description>
        <inlineHelpText>LEASE ONLY - Sales Tax First Month, First Year</inlineHelpText>
        <label>Sales Tax First Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Paid_to_CEG_Date__c</fullName>
        <description>LEASE ONLY  - Date Sales Tax was Paid to CEG</description>
        <inlineHelpText>LEASE ONLY  - Date Sales Tax was Paid to CEG</inlineHelpText>
        <label>Sales Tax Paid to CEG (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Effective Sales Tax Percentage (%)</description>
        <inlineHelpText>Effective Sales Tax Percentage (%)</inlineHelpText>
        <label>Sales Tax Percentage (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Prepaid__c</fullName>
        <defaultValue>0</defaultValue>
        <description>LEASE ONLY - Sales Tax Prepaid</description>
        <inlineHelpText>LEASE ONLY - Sales Tax Prepaid</inlineHelpText>
        <label>Sales Tax Prepaid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Self_Generated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Mapped from Opportunity Self-Generated? field</description>
        <inlineHelpText>Mapped from Opportunity Self-Generated? field</inlineHelpText>
        <label>Self-Generated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingContact__c</fullName>
        <label>Shipping Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingFax__c</fullName>
        <label>Shipping Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingLocation__c</fullName>
        <label>Shipping Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingMethod__c</fullName>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>Airborne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Delivery</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ShippingPhone__c</fullName>
        <label>Shipping Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <label>Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Signed_Credit_App_Attached_Lease__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Credit App Attached (Lease)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_As_EPC_Price__c</fullName>
        <label>Sold-As EPC Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_Financing_Rate_Year_1_kWh__c</fullName>
        <label>Sold Financing Rate Year 1 ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sold_System_Design_SKP_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Sketchup Design of the System That was Sold is Attached</description>
        <inlineHelpText>Is The Sketchup Design of the System That was Sold Attached?</inlineHelpText>
        <label>Sold System Design SKP Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_System_Design__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold System Design</label>
        <referenceTo>System_Design__c</referenceTo>
        <relationshipLabel>Sales Orders (Sold System Design)</relationshipLabel>
        <relationshipName>Sales_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Grant_Date_Paid_To_CEG__c</fullName>
        <description>LEASE ONLY: Date State Grant Paid to CEG</description>
        <inlineHelpText>LEASE ONLY: Date State Grant Paid to CEG</inlineHelpText>
        <label>State Grant Date Paid To CEG</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Grant_Estimated_vs_Actual__c</fullName>
        <description>Actual - Estimated State Grant Payment ($)</description>
        <formula>State_Grant_Received__c - Total_State_Grant_Est__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual - Estimated State Grant Payment ($)</inlineHelpText>
        <label>State Grant Estimated vs Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_Received_Date__c</fullName>
        <description>Date State Grant Payment Received</description>
        <inlineHelpText>Date State Grant Payment Received</inlineHelpText>
        <label>State Grant Received (Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Grant_Received__c</fullName>
        <description>Amount Actually Received From State Grant ($)</description>
        <inlineHelpText>Amount Actually Received From State Grant ($)</inlineHelpText>
        <label>State Grant Received ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State_Grant_W__c</fullName>
        <description>State Grant ($/W)</description>
        <inlineHelpText>State Grant ($/W)</inlineHelpText>
        <label>State Grant ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <label>Status Code</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Submit Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Assigned to Sales Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submit To Sales Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Coordinator Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Manager Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Coordinator Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final/Accounting Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Administrator Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated to VP Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Sales Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP Sales Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Proposal Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Proposal Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Ongoing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conversion Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller Rejected - Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Admin Approved - Finance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmitMessage__c</fullName>
        <label>Submit Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sum_of_Deposit_Invoice_Totals__c</fullName>
        <description>This field is populated by the Sum_of_Deposit_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Deposit&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Deposit_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Deposit&quot;</inlineHelpText>
        <label>Sum of Deposit Invoice Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Deposit_Payments__c</fullName>
        <description>This field is populated by the Sum_of_Deposit_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Deposit&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Deposit_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Deposit&quot;</inlineHelpText>
        <label>Sum of Deposit Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Inspection_Invoice_Totals__c</fullName>
        <description>This field is populated by the Sum_of_Inspection_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Inspection&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Inspection_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Inspection&quot;</inlineHelpText>
        <label>Sum of Inspection Invoice Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Inspection_Payments__c</fullName>
        <description>This field is populated by the Sum_of_Inspection_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Inspection&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Inspection_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Inspection&quot;</inlineHelpText>
        <label>Sum of Inspection Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Installation_Invoice_Totals__c</fullName>
        <description>This field is populated by the Sum_of_Installation_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Installation&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Installation_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Installation&quot;</inlineHelpText>
        <label>Sum of Installation Invoice Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Installation_Payments__c</fullName>
        <description>This field is populated by the Sum_of_Installation_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Installation&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Installation_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type of &quot;Installation&quot;</inlineHelpText>
        <label>Sum of Installation Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Other_Invoice_Totals__c</fullName>
        <description>This field is populated by the Sum_of_Other_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type not equal to &quot;Installation&quot;, &quot;Inspection&quot;, or &quot;Deposit&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Other_Invoice_Totals Lookup Rollup Summary. It is summing the Invoice Total field on child Sales Invoices that have a status of &quot;Complete&quot; and a type not equal to &quot;Installation&quot;, &quot;Inspection&quot;, or &quot;Deposit&quot;</inlineHelpText>
        <label>Sum of Other Invoice Totals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Other_Payments__c</fullName>
        <description>This field is populated by the Sum_of_Other_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type not equal to &quot;Installation&quot;, &quot;Inspection&quot;, or &quot;Deposit&quot;</description>
        <inlineHelpText>This field is populated by the Sum_of_Other_Payments Lookup Rollup Summary. It is summing the Payments field on child Sales Invoices that have a status of &quot;Complete&quot; and a type not equal to &quot;Installation&quot;, &quot;Inspection&quot;, or &quot;Deposit&quot;</inlineHelpText>
        <label>Sum of Other Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sun_Eye_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Sun Eye for the System That was Sold is Attached to The Survey Object</description>
        <inlineHelpText>Is The Sun Eye for the System That was Sold Attached to The Survey Object?</inlineHelpText>
        <label>Sun Eye Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Photos_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Survey Photos for the System That was Sold is Attached to The Survey Object</description>
        <inlineHelpText>Is The Survey Photos for the System That was Sold Attached to The Survey Object?</inlineHelpText>
        <label>Survey Photos Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Design_Drawing_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The System Design Drawing for the System That was Sold is Attached to The System Design Object</description>
        <inlineHelpText>Is The System Design Drawing for the System That was Sold Attached to The System Design Object?</inlineHelpText>
        <label>System Design Drawing Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Design_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>Sales Orders</relationshipLabel>
        <relationshipName>Sales_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>System_Makeup__c</fullName>
        <label>System Makeup</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>System_Size_kW__c</fullName>
        <label>System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Time_Delta_1__c</fullName>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Time Delta 1</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>